resources/css/app.css
/* define variable */
:root {
    --red2: #C50502;
    --blue2: #15184D;
}

.sqbtn {
    color: black;
    background-color: white;
    border: 1px solid black;
    border-radius: 0;
    padding: 15px 40px; /* Adjust padding as needed */
    transition: all 0.3s ease; /* Smooth transition */
    text-decoration: none;
    font-weight: 300;
}

.donh {
    position: relative;
}
.donalign {
    font-weight: 700;
    font-size: 72pt;
    color: white;
}

.sqbtn:hover {
    background-color: black;
    color: white;
}

/* layout.app */



.stickysec {
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    z-index: 1000; /* Ensure it stays above other content */
}


/* part1 */
.part1{
    min-height: 800px;
}

.part1_1{
    transition: transform 0.3s ease;
}
.part1_1:hover{
    transform: scale(1.05);
}

.underable:hover{
    text-decoration: none;
}

.mm{

    /* Apply a linear gradient as the background */
    background: linear-gradient(45deg, #8B8CD6,#CD2623,#EC9F9E);

    /* Use WebKit background clip property to clip the background to the text */
    -webkit-background-clip: text;
    background-clip: text;

    /* Make the text color transparent to reveal the background gradient */
    color: transparent;

    /* You can also add other styles as needed */
    font-weight: bold; /* For instance, make the text bold */
    font-size: 2rem; /* Adjust the font size as desired */
}

.subbutton{
    background-color: var(--blue2);
    transition: background-color 0.3s;
}

.newscard{
    font-weight: 300;
}


.subbutton:hover{
    background-color: var(--red2);
}


.navbutton:nth-of-type(1){
    background-color: var(--blue2);
}

.navbutton:nth-of-type(2){
    background-color: var(--blue2);
}

.navbutton:nth-of-type(3){
    background-color: var(--blue2);
}

.navbutton:hover{
    background-color: var(--red2);
}

.card-text-color{
    color: var(--blue2);
}

/* part2 */
.part2{
    min-height:800px;
    background: linear-gradient(to top, #8C314A  ,#3B295E,#242763);
}
.part2_1{
    font-size:60px
}

.part2_2{
    margin-top: 200px;
}

/* part3 */
.part3{
    min-height: 850px;
    /* z-index: 1; */
    transition: top 0.3s ease;
}

.motto{
    font-size: 100px;
    font-weight: 900;
}




/* donation card */
.donationcard{
    background-color: rgb(197, 197, 197);
    min-height: 900px;
}

.dono1{
    color:darkblue;
}
.dono2{
    color:black;
}

.card1,.card2,.card3,.card4{
    height:400px;
    border-radius: 12px;
    transition: transform 0.3s ease;
}

.card1:hover,.card2:hover,.card3:hover,.card4:hover{
    transform: scale(0.95);
}

.card1{
    background-color: #00008B;
}
.card2{
    background-color: #000066;
}
.card3{
    background-color: #00004e;
}
.card4{
    background-color: #000038;
}

